Interesting button styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
-    <button id="reset">Reset</button>
+    <div class="button">
+        <button id="reset">New canvas</button>
+    </div>
+    
     <div id="container"></div>
 
     <script src="./app.js"></script>
